--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "deploy": "gh-pages --dotfiles -d .output/public"
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
@@ -15,6 +16,7 @@
     "vue-router": "^4.3.3"
   },
   "devDependencies": {
+    "gh-pages": "^6.1.1",
     "nuxt": "^3.12.2",
     "vite-plugin-vuetify": "^2.0.3",
     "vuetify": "^3.6.10"
