--- a/package.json
+++ b/package.json
@@ -7,16 +7,16 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare",
-    "deploy": "gh-pages --dotfiles -d .output/public"
+    "postinstall": "nuxt prepare"
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "firebase-admin": "^12.0.0", 
+    "firebase-functions": "^5.0.1",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
   },
   "devDependencies": {
-    "gh-pages": "^6.1.1",
     "nuxt": "^3.12.2",
     "vite-plugin-vuetify": "^2.0.3",
     "vuetify": "^3.6.10"
